--- a/P000562.opf/layers/v001/Pagination.yml
+++ b/P000562.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 87554443d36541c1801ac2ca43366520
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f04c6ee7c6b84b6698a646499d3480ca:
