--- a/P000562.opf/meta.yml
+++ b/P000562.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000562
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W8LS17366
   title: རྒྱལ་མཚན་རྩེ་མོའི་དཔུང་རྒྱན་གཟུངས་དང་ཆ་གསུམ།
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 454
       base_file: v001.txt
-ebook_metadata:
-  title: རྒྱལ་མཚན་རྩེ་མོའི་དཔུང་རྒྱན་གཟུངས་དང་ཆ་གསུམ།
-  author: ''
-  sku: P000562
-  cover: cover.jpg
-  layers:
-  - pagination
