--- a/P000562.opf/meta.yml
+++ b/P000562.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000562
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-16 15:47:04.642687
 source_metadata:
   id: bdr:W8LS17366
   title: རྒྱལ་མཚན་རྩེ་མོའི་དཔུང་རྒྱན་གཟུངས་དང་ཆ་གསུམ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 454
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
